--- a/index.html
+++ b/index.html
@@ -14,19 +14,52 @@
         <nav class="nav">
             <h3>Header Logo</h3>
             <div class="links">
-                <a href="" class="link">header link one</a>
-                <a href="" class="link">header link two</a>
-                <a href="" class="link">header link three</a>
+                <a href="#" class="link">header link one</a>
+                <a href="#" class="link">header link two</a>
+                <a href="#" class="link">header link three</a>
             </div>
         </nav>
         <div class="intro">
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <h1 class="title">This website is awesome</h1>
+                <p class="info">This website has some subtest that goes here under te main title. It's a smaller font and the color is lower contrast</p>
+                <button class="signup"></button>
+            </div>
+            <div class="card">
+                <p class="placeholdertext">this is a placeholder for an image</p>
+            </div>
         </div>
     </header>
     <mains>
-        </main>
-        <footer></footer>
+        <div class="section1">
+        <h2 class="title"></h2> 
+        <div class="blocks">
+            <div class="block">
+                <div class="box"></div>
+                    <div class="p">this is some subtest under an inlllustration of image</div>
+                </div>
+                <div class="block">
+                    <div class="box"></div>
+                    <div class="p">this is some subtest under an inlllustration of image</div>
+                </div>
+                <div class="block">
+                    <div class="box"></div>
+                    <div class="p">this is some subtest under an inlllustration of image</div>
+                </div>
+                <div class="block">
+                    <div class="box"></div>
+                    <div class="p">this is some subtest under an inlllustration of image</div>
+                </div>
+           </div>
+        </div>
+        <div class="section2">
+            <div class="content">
+                <p class="quote">This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, Who knows? All I know is that it looks nice.</p>
+                <h3 class="author">-Thor, God of Thunder</h3>
+            </div>     
+        </div>
+    </mains>
+    <footer></footer>
 </body>
 
 </html>
