--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                 <h3 class="author">-Thor, God of Thunder</h3>
             </div>     
         </div>
+        <div class="section3">
+            <div class="content">
+                <div class="text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>signup</button>
+            </div>
+        </div>
     </mains>
     <footer></footer>
 </body>
