--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="card">
                 <h1 class="title">This website is awesome</h1>
                 <p class="info">This website has some subtest that goes here under te main title. It's a smaller font and the color is lower contrast</p>
-                <button class="signup"></button>
+                <button>signup</button>
             </div>
             <div class="card">
                 <p class="placeholdertext">this is a placeholder for an image</p>
@@ -68,7 +68,9 @@
             </div>
         </div>
     </mains>
-    <footer></footer>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
