--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
                 <p class="info">This website has some subtest that goes here under te main title. It's a smaller font and the color is lower contrast</p>
                 <button>signup</button>
             </div>
-            <div class="card">
+            <div class="card-img">
                 <p class="placeholdertext">this is a placeholder for an image</p>
             </div>
         </div>
     </header>
     <mains>
         <div class="section1">
-        <h2 class="title"></h2> 
-        <div class="blocks">
-            <div class="block">
-                <div class="box"></div>
-                    <div class="p">this is some subtest under an inlllustration of image</div>
+            <h2 class="title">Some random information</h2> 
+            <div class="blocks">
+                <div class="block">
+                    <div class="box"></div>
+                    <p>this is some subtest under an inlllustration of image</p>
                 </div>
                 <div class="block">
                     <div class="box"></div>
-                    <div class="p">this is some subtest under an inlllustration of image</div>
+                    <p>this is some subtest under an inlllustration of image</p>
                 </div>
                 <div class="block">
                     <div class="box"></div>
-                    <div class="p">this is some subtest under an inlllustration of image</div>
+                    <p>this is some subtest under an inlllustration of image</p>
                 </div>
                 <div class="block">
                     <div class="box"></div>
-                    <div class="p">this is some subtest under an inlllustration of image</div>
+                    <p>this is some subtest under an inlllustration of image</p>
                 </div>
-           </div>
+            </div>
         </div>
         <div class="section2">
             <div class="content">
